--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                     <div class="overlay">
                                         <div class="link">
                                             <a class="visit" target="_blank"
-                                                href="https://kumar-ayush.netlify.app/">visit</a>
+                                                href="https://kumar-ayush-old.netlify.app/">visit</a>
                                             <a class="github" href="https://github.com/ayushssshhh/portfolio">github</a>
                                         </div>
                                     </div>
