--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="cover1">
                 <div class="about">
                     <h1 class="about-h1 cursor-scale">ABOUT <i class="fa-solid fa-arrow-right"></i></h1>
-                    <p class="about-p cursor-scale small">Hey there!, I'm KUMAR AYUSH<span>(he/him)</span> software
+                    <p class="about-p cursor-scale small smallText">Hey there!, I'm KUMAR AYUSH<span>(he/him)</span> software
                         engineer based in
                         INDIA, Specializing in technical education through
                         hands-on learning and building applicaion.
@@ -387,7 +387,6 @@
                 </div>
 
                 <div class="lineCover">
-                    <div class="line"></div>
                     <div class="get cursor-scale">
                         <p>get in <br>touch</p>
                     </div>
